# predeployment_demo

./: .gitignore  CMakeLists.txt  Readme.md  package.xml
config/: joint_positions.yaml
launch/: pick_and_place.launch.py
scripts/: move_robot_cartesian.py  move_robot_joints.py
src/: hello_world.cpp  manipulability_analyzer.cpp  only_robot.cpp  pick_and_place.cpp
